prevent input field zoom on mobile devices #145

--- a/style.css
+++ b/style.css
@@ -150,6 +150,15 @@ a img {
 	vertical-align: bottom;
 }
 
+/* prevent input field zoom on mobile devices */
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+	select,
+	textarea,
+	input {
+		font-size: 16px;
+	}
+}
+
 
 /*--------------------------------------------------------------
 >>> Structure Elements
